# TORSION

./: README.md  TORSION_experiment_design.md  TORSION_framing.md  TORSION_results_summary.md  TORSION_발표정리.md  pyproject.toml
configs/: object_torsion.yaml
scripts/: analyze_results.py  interfuser_smoke.py  make_costmap_figures.py  make_figures.py  run_bev_torsion.py  run_carla_sweep.py  run_costmap_torsion.py  run_failure_taxonomy.py  run_mechanism_analysis.py  run_nuplan_propagation.py  run_object_torsion.py  run_planner_independence.py  run_planner_invariance.py  run_propagation_analysis.py  run_synthetic_experiment.py  run_transfer_function.py  unified_phase3_analysis.py
tests/: __init__.py  test_carla_runner.py  test_costmap_operators.py  test_costmap_runner.py  test_failure_taxonomy.py  test_interfuser_integration.py  test_mechanism.py  test_nuplan_adapter.py  test_nuplan_map.py  test_nuplan_propagation.py  test_nuscenes_adapter.py  test_object_operators.py  test_planner_selection.py  test_potential_field_planner.py  test_prediction_stage.py  test_propagation.py  test_safety.py  test_statistics.py  test_synthetic_harness.py  test_temporal.py  test_torsion_displace_aliases.py  test_transfer_function.py  test_twist_operators.py  test_unified_pipeline.py
torsion/: __init__.py
torsion/analysis/: __init__.py  failure_taxonomy.py  mechanism.py  propagation.py  transfer_function.py
torsion/data/: __init__.py  _geometry.py  nuplan_adapter.py  nuplan_map.py  nuscenes_adapter.py
torsion/injectors/: __init__.py  carla_adapter.py  pytorch_hook.py  ros2_interceptor.py
(+36 files in other folders)
